<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f1f2f6">

    <TextView
        android:id="@+id/labelRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="10dp"
        android:text="LOGIN"
        android:textAlignment="center"
        android:textColorHint="@android:color/black"
        android:textColor="@android:color/black"
        android:textSize="50sp" />


    <EditText
        android:id="@+id/editTextUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/labelRegister"
        android:layout_marginLeft="@dimen/padding_left_right_30dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="@dimen/padding_left_right_30dp"
        android:background="@drawable/selector_background_edit_text"
        android:drawableStart="@drawable/drawable_email"
        android:drawablePadding="@dimen/drawable_padding"
        android:hint="@string/email"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/black"
        android:inputType="textEmailAddress"
        android:padding="10dp" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextUsername"
        android:layout_marginLeft="@dimen/padding_left_right_30dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="@dimen/padding_left_right_30dp"
        android:background="@drawable/selector_background_edit_text"
        android:drawableLeft="@drawable/drawable_password"
        android:textColor="@android:color/black"
        android:drawablePadding="@dimen/drawable_padding"
        android:hint="@string/password"
        android:textColorHint="@android:color/black"
        android:inputType="textPassword"
        android:padding="10dp" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/round_button"
        android:paddingLeft="@dimen/padding_left_right_20dp"
        android:paddingRight="@dimen/padding_left_right_20dp"
        android:text="@string/login"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/white" />


    <TextView
        android:id="@+id/buttonForgetPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonLogin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/forgot_password"

        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:textStyle="normal" />

</RelativeLayout>